# codestripper

./: README.md  action.yml  main.py  pyproject.toml  requirements.txt  task.yml
.github/workflows/: test.yml
prepare_codestripper/: main.py
tests/: test_main.py
tests/testproject/: a.txt  b.txt
