[project]
name = "prepare-codestripper"
version = "1.1.0"
description = "Codestripper action for prepare assignment"
authors = [{ name = "Martijn Bonajo", email = "m.bonajo@fontys.nl" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prepare-toolbox==0.4.0",
    "codestripper==1.2.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
